# goingfast

./: .dockerignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run-local.sh.example
.github/workflows/: main.yml
docker/: Dockerfile  start.sh
goingfast/: __init__.py
goingfast/notifications/: telegram.py
goingfast/traders/: base.py  binancefutures.py  binancespot.py  bitmex.py  bybit.py  helpers.py
